Mon Jun  7 22:30:37 1999  Jeffrey A Law  (law@cygnus.com)

	* m68k/x-hp3bsd44: Delete obsolete and incorrect file.
	* configure.in (m68k-hp-bsd4.4): No longer use x-hp3bsd44.
	* configure: Rebuilt.

Mon Jun  7 22:05:03 1999  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/gnu.h: Include <gnu.h> right after <i386/linux.h>,
	such that we can override its definitions if necessary.
	(CPP_SPEC): New define.  Support processor specific predefines via
	%(cpp_cpu).
	(CC1_SPEC): New define.  Support processor specific compiler
	options via %(cc1_cpu).
	(STARTFILE_SPEC): New define.  Use crt0.o instead of crt1.o for
	-static.

1999-06-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* fixinc/inclhack.def (math_gcc_ifndefs): Insert whitespace
	between sed's -e flag, and the open-quote following it.
	* fixinc/fixincl.x, fixinc/fixincl.sh: Rebuilt.

Mon Jun  7 20:34:20 1999  Robert Lipe <robertlipe@usa.net>
			  Jeffrey A Law  (law@cygnus.com)

	* varasm.c (assemble_start_function): Remove the function
	from the pending weak decls list when we define a function.
	(assemble_variable): Similarly for variables.
	(weak_finish): Ignore items on the list with a NULL name.
	(remove_from_ending_weak_list); New function to "remove" an item
	from the pending weak declarations list.

Mon Jun  7 19:27:07 1999  Jerry Quinn <jquinn@nortelnetworks.com>

	* pa.md (fmpyfadd, fmpynfadd, fnegabs): New patterns.

Sun Jun  6 11:58:34 1999  Jakub Jelinek  <jj@ultra.linux.cz>

	* sparc.md (abstf2): This should be an expand.
	(split after abstf2_notv9): Fix mode.
	(abstf2_hq_v9): New pattern.
	(abstf2_v9): Only use when no hard quad.
	(absdf2_v9): Fix if target is not the same as source.
	(ashrsi3_extend, ashrsi3_extend2, lshrsi3_extend, lshrsi3_extend2):
	Add correct output constraints.

Sat Jun  5 17:04:16 1999  Craig Burley  <craig@jcb-sc.com>

	From Dave Love to egcs-patches on 20 May 1999 17:38:38 +0100:
	* invoke.texi: Clarify text vis-a-vis Intel CPUs.
